<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_speech__detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.drrajeshpc.goodspeaks.com.cocoagarage.drrajeshpc.goodspeaks.Speech_Detail"
    tools:showIn="@layout/activity_speech_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title_sample"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:inputType="none"
            android:ems="10"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tt1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onClickTitleDialog"
            android:textColor="?android:attr/textColorSecondary" />

        <View
            android:id="@+id/Line1"
            android:layout_marginTop="7dp"
            android:layout_below="@+id/textViewTitle"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?attr/colorButtonNormal" />

        <TextView
            android:id="@+id/tt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/Line1"/>

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_sample"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:inputType="none"
            android:ems="10"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/tt2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onClickDateDialog"
            android:textColor="?android:attr/textColorSecondary" />

        <View
            android:id="@+id/Line2"
            android:layout_marginTop="7dp"
            android:layout_below="@+id/textViewDate"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?attr/colorButtonNormal" />

        <TextView
            android:id="@+id/tt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/completed_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/Line2"
            android:textColor="?android:attr/textColorSecondary" />

        <Switch
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tt3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/switch_completed"/>

        <View
            android:id="@+id/Line3"
            android:layout_marginTop="7dp"
            android:layout_below="@+id/tt3"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?attr/colorButtonNormal" />

        <TextView
            android:id="@+id/tt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/practice_speeches_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/tt3"/>


        <Button
            android:text="@string/practice_now"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_below="@+id/tt4"
            android:onClick="onClickCreatePractice" />

        <ListView
            android:id="@+id/listview_recordings"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@+id/button"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:divider="#fff"
            android:dividerHeight="0dp"
            tools:ignore="NestedScrolling" />

        <View
            android:id="@+id/Line4"
            android:layout_marginTop="7dp"
            android:layout_below="@+id/listview_recordings"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="?attr/colorButtonNormal" />

        <TextView
            android:id="@+id/tt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/evaluations_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/listview_recordings"/>

        <Button
            android:text="@string/add_evaluation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:layout_below="@+id/tt6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="onClickEvaluationDialog" />

        <ListView
            android:id="@+id/listview_evaluations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button1"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:divider="#fff"
            android:dividerHeight="0dp"
            tools:ignore="NestedScrolling" />


    </RelativeLayout>
</ScrollView>